# EstructurasDeDatosPython

./: README.md
ArbolBinario/Heap/Array/ArrayHeap/: ArrayHeapExtAbstract.py  array_heap_ext.py  array_heap_ext_client.py
ArbolBinario/Heap/Array/BinaryTree/: LinkedBinaryTreeExt.py  (+2 more)
CastoloKits/: abstracta.py  camiseta.py  camisetaenum.py  castolo_admin.py  equipenum.py  equipo.py  liga.py  main.py  temporada.py
EjercicioPractico/HeroesVillanosEjercicio/: main.py  procesos.py
EjercicioPractico/HeroesVillanosEjercicio/env/: pyvenv.cfg
EjercicioPractico/TableMap/: SortedTableMap.py  SortedTableMapAbstract.py  pyproject.toml  sorted_table_map_client.py
EjercicioPractico/TableMap/env/: pyvenv.cfg
EjercicioPractico/TableMap/env/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
EjerciciosPythonBasicos/: Ejercisio1.py  Ejercisio2.py  Ejercisio3.py  Ejercisio3a.py  Ejercisio4.py  Ejercisio5.py  Ejercisio6.py  Ejercisio7op.py  ejercisio3b.py
EstructurasList/3.1/: LinkedStackExt.py  linked_stack_ext_client.py
EstructurasList/3.1/env/: pyvenv.cfg
EstructurasList/3.3/: linked_list_ext_abstract.py  linkedclient.py  linkedlistext.py
EstructurasList/3.3/env/: pyvenv.cfg
EstructurasList/3.5/: Deque.py  dequeclient.py  linked_deque.py
EstructurasList/3.5/env/: pyvenv.cfg
EstructurasList/tp3..7/: cliente.py  linked_queue_ext.py  tramite.py  tramite_admin.py  tramites.db
EstructurasList/tp3..7/env/: pyvenv.cfg
MamboretaEjercicioCSV/: genero.py  mamboreta_admin.py  mamboreta_admin_abstracta.py  pelicula.py  persona.py  test.py
(+39 files in other folders)
