[tool.poetry]
name = "martin"
version = "0.1.0"
description = ""
authors = ["martin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-ed-fcad-uner = {git = "https://github.com/nachonovello1984/python-ed-fcad-uner.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
